<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2012-2016 Arne Schwabe
  ~ Distributed under the GNU GPL v2 with additional terms. For full terms see the file doc/LICENSE.txt
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/tls_settings">
        <CheckBoxPreference
            android:key="remoteServerTLS"
            android:summary="@string/check_remote_tlscert"
            android:title="@string/check_remote_tlscert_title" />
        <CheckBoxPreference
            android:key="checkRemoteCN"
            android:summary="@string/remote_tlscn_check_summary"
            android:title="@string/remote_tlscn_check_title" />

        <de.blinkt.openvpn.views.RemoteCNPreference
            android:dependency="checkRemoteCN"
            android:key="remotecn"
            android:title="@string/enter_tlscn_title" />

        <EditTextPreference
            android:dependency="checkRemoteCN"
            android:dialogMessage="Field  in  the X.509 certificate subject to be used as the username (default=CN)."
            android:key="remotex509name"
            android:persistent="false"
            android:title="X509 Username Field" />

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/tls_authentication">
        <SwitchPreference
            android:key="useTLSAuth"
            android:summary="@string/tls_key_auth"
            android:title="@string/useTLSAuth" />

        <Preference
            android:dependency="useTLSAuth"
            android:key="tlsAuthFile"
            android:title="@string/tls_auth_file" />

        <ListPreference
            android:dependency="useTLSAuth"
            android:entries="@array/tls_directions_entries"
            android:entryValues="@array/tls_directions_values"
            android:key="tls_direction"
            android:persistent="false"
            android:title="@string/tls_direction" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/encryption">
        <EditTextPreference
            android:dialogMessage="@string/chipher_dialog_message"
            android:dialogTitle="@string/cipher_dialog_title"
            android:key="cipher"
            android:persistent="false"
            android:title="@string/encryption_cipher" />
        <EditTextPreference
            android:dialogMessage="@string/auth_dialog_message"
            android:dialogTitle="@string/auth_dialog_title"
            android:key="auth"
            android:persistent="false"
            android:title="@string/packet_auth" />
    </PreferenceCategory>

</PreferenceScreen>