<!--
  ~ Copyright (c) 2012-2014 Arne Schwabe
  ~ Distributed under the GNU GPL v2. For full terms see the file doc/LICENSE.txt
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/client_behaviour">

    <CheckBoxPreference
        android:key="usePersistTun"
        android:summary="@string/persisttun_summary"
        android:title="@string/persistent_tun_title" />


    <PreferenceCategory android:title="@string/reconnection_settings">
        <ListPreference
            android:entries="@array/crm_entries"
            android:entryValues="@array/crm_values"
            android:key="connectretrymax"
            android:persistent="false"
            android:title="@string/connection_retries" />

        <EditTextPreference
            android:dialogMessage="@string/connectretrymessage"
            android:key="connectretry"
            android:persistent="false"
            android:title="@string/connectretrywait" />
    </PreferenceCategory>
</PreferenceScreen>